Source/WebKit/UIProcess/API/Cocoa/WKProcessPool.mm
@@ -590,4 +590,9 @@ static RetainPtr<WKProcessPool>& sharedProcessPool()
     _processPool->setUsesOnlyHIDGamepadProviderForTesting(usesHIDProvider);
 }
 
+- (void)_terminateAllWebContentProcesses
+{
+    _processPool->terminateAllWebContentProcesses();
+}
+
 @end
